[package]
name = "serde_json_compare"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1", optional = true }

[dev-dependencies]
insta = "1.28.0"

[features]
cli = ["clap", "thiserror"]

[[bin]]
name = "serde_json_compare"
required-features = ["cli"]
