[package]
name = "serde_json_diff"
description = "Create machine-readable JSON diffs"
version = "0.2.0"
license = "MIT"
edition = "2021"
documentation = "https://docs.rs/serde_json_diff"
repository = "https://github.com/Teajey/serde_json_diff"
keywords = ["diff", "json", "serde", "serde_json"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1", optional = true }

[dev-dependencies]
insta = "1.28.0"

[features]
cli = ["clap", "thiserror"]

[[bin]]
name = "serde_json_diff"
required-features = ["cli"]
